fix: Slider component overflowing

--- a/src/containers/Slider/style.scss
+++ b/src/containers/Slider/style.scss
@@ -3,6 +3,7 @@
 .SlideCardList {
   position: relative;
   width: 100%;
+  overflow: hidden;
   max-width: 1440px;
   height: 586px;
   .SlideCard {
